--- a/static/style.css
+++ b/static/style.css
@@ -1,36 +1,80 @@
 body {
-	background-color: #ccc;
-	text: #000;
+	background-color: #e1ddd9;
+        font-size: 12px;
+        font-family: Verdana, Arial, SunSans-Regular, Sans-Serif;
+        color:#564b47;
+        padding: 0px 20px;
+        margin:0px;
+}
+
+a {
+        color: blue;
+        text-decoration: none;
 }
 
 
 div#top {
-	border: 1px solid black;
 	padding: 10px;
-	height: 30px;
+	height: 70px;
+        text-align: right;
 }
 
+div#top h1 {
+        margin: 1px;
+}
+
+div#top h2 {
+        margin: 2px;
+}
+
+div#subhead {
+        text-align:right;
+        background-color: gray;
+        color: #ccc;
+        padding-top: 2px;
+        padding-bottom: 2px;
+        padding-right: 10px;
+}
 div#leftblah {
 	float: left;
-	padding: 10px;
 	width: 200px;
+        min-height: 250px;
 	margin-top: 0px;
 	padding-top: 0px;
+        background-color:#ccc;
+        padding: 20px;
 }
 div#navigation,
 div#subnavigation,
 div#userblock {
-	border: 1px solid black;
-	float: left;
-	padding: 10px;
-	width: 200px;
-	margin-top: 30px;
+        margin-top: 20px;
+        padding: 5px;
+        border-top: 1px dotted gray;
+}
+div#navigation ul {
+        list-style-type: none;
+        padding: 0px;
+        margin: 0px;
+}
+div#navigation li {
+        padding: 0px;
+        margin: 0px;
+}
+div#navigation a {
+        font-size: large;
+        border: 1px solid gray;
+        display: block;
+        padding: 2px;
+        margin-top: 3px;
+}
+div#navigation a:hover {
+        background-color: #ddd;
 }
 
 div#content {
-	padding: 10px;
-	border: 1px solid blue;
-	margin-left: 240px;
-	margin-top: 30px;
+	padding: 20px;
+        background-color: #fff;
+        overflow: auto;
+        min-height: 350px;
 }
 
