@bogus fixed layout for IE6

--- a/static/style.css
+++ b/static/style.css
@@ -36,13 +36,14 @@ div#subhead {
         padding-right: 10px;
 }
 div#leftblah {
-	float: left;
+	left: 20px;
 	width: 200px;
         min-height: 250px;
 	margin-top: 0px;
 	padding-top: 0px;
         background-color:#ccc;
         padding: 20px;
+	position: absolute;
 }
 div#navigation,
 div#subnavigation,
@@ -76,5 +77,6 @@ div#content {
         background-color: #fff;
         overflow: auto;
         min-height: 350px;
+	margin-left: 240px;
 }
 
