--- a/static/style.css
+++ b/static/style.css
@@ -49,8 +49,11 @@ div#navigation,
 div#subnavigation,
 div#userblock {
         margin-top: 20px;
-        padding: 5px;
-        border-top: 1px dotted gray;
+}
+div#userblock {
+	background-color: #eee;
+	border: 1px solid gray;
+	padding: 5px;
 }
 div#navigation ul {
         list-style-type: none;
@@ -62,11 +65,14 @@ div#navigation li {
         margin: 0px;
 }
 div#navigation a {
-        font-size: large;
+        font-size: 16px;
         border: 1px solid gray;
         display: block;
         padding: 2px;
         margin-top: 3px;
+	background-color: #eee;
+	color: #000;
+	padding-left: 10px;
 }
 div#navigation a:hover {
         background-color: #ddd;
