--- a/sphenecoll/templates/sphene/sphwiki/showSnip.html
+++ b/sphenecoll/templates/sphene/sphwiki/showSnip.html
@@ -13,7 +13,7 @@
     {% else %}
       <h1 class="wiki_title">{{ snip.name }}</h1>
     {% endif %}
-    <small>{{ snip.name }} - Last Change: {{ snip.changed|sph_date }} by {% sphboard_displayUserName snip.editor %}{% if perms.sphwiki.add_wikisnip %} - [ <a href="../../edit/{{ snip.name }}" >Edit</a> ]{% endif %}</small><br/>
+    <small>{{ snip.name }} - Last Change: {{ snip.changed|sph_date }} by {% sphboard_displayUserName snip.editor %}{% if perms.sphwiki.add_wikisnip %} - [ <a href="../../edit/{{ snip.name }}" >Edit</a> ] [ <a href="../../attachments/{{ snip.name }}">Attachments</a> ]{% endif %}</small><br/>
 
     {{ snip.body|sph_markdown }}
   {% else %}
