added 'new threads' display and sticky threads features

--- a/sphenecoll/templates/sphene/base.html
+++ b/sphenecoll/templates/sphene/base.html
@@ -4,6 +4,7 @@
   <style type="text/css">
     .sphboard_categories {
       border-collapse: collapse;
+      width: 100%;
     }
     .sphboard_categories td,
     .sphboard_categories th {
@@ -15,8 +16,14 @@
       white-space: nowrap;
     }
 
+    .sphboard_threadcount, .sphboard_postcount {
+      width: 5%;
+      text-align: right;
+    }
+
     .sphboard_latestpost {
       white-space: nowrap;
+      width: 30%;
     }
 
     .sphboard_postform {
@@ -40,7 +47,8 @@
       border-collapse: collapse;
     }
 
-    .sphboard_post_list td {
+    .sphboard_post_list td,
+    .sphboard_post_list th {
       border: 1px solid gray;
       padding: 5px;
     }
@@ -58,7 +66,13 @@
       width: 100%;
       border-collapse: collapse;
     }
-    .sphboard_thread_list td {
+
+    .sphboard_mainhead {
+      background-color: #eee;
+    }
+
+    .sphboard_thread_list td,
+    .sphboard_thread_list th {
       border: 1px solid gray;
       padding: 5px;
     }
