--- a/sphenecoll/templates/sphene/sphboard/_displayBreadcrumbs.html
+++ b/sphenecoll/templates/sphene/sphboard/_displayBreadcrumbs.html
@@ -1,4 +1,4 @@
-<a href="../../show/0/">Board<a>
+<a href="../../show/0/">Board</a>
 {% if categories %}
   {% for category in categories %}
     &gt;&gt; 
