--- a/sphenecoll/templates/sphene/sphboard/listCategories.html
+++ b/sphenecoll/templates/sphene/sphboard/listCategories.html
@@ -33,7 +33,7 @@
       {% for thread in thread_list %}
         <tr>
           <td width="20px"><img src="/static/sphene/sphboard/icons/{% if thread.hasNewPosts %}new{% endif %}folder.gif" width='16px' height='16px' /></td>
-          <td>{% if thread.is_sticky %}Sticky: {% endif %}<a href="../../thread/{{ thread.id }}/">{{ thread.subject }}</a><br/><small>{% if isShowLatest %}{% sphboard_displayBreadcrumbsForCategory thread.category 1 %} - {% endif %}by {% sphboard_displayUserName thread.author %}</small></td>
+          <td>{% if thread.is_sticky %}<b>Sticky:</b> {% endif %}{% if thread.is_poll %}Poll: {% endif %}<a href="../../thread/{{ thread.id }}/">{{ thread.subject }}</a><br/><small>{% if isShowLatest %}{% sphboard_displayBreadcrumbsForCategory thread.category 1 %} - {% endif %}by {% sphboard_displayUserName thread.author %}</small></td>
           <td class="sphboard_postcount">{{ thread.postCount }}</td>
           <td class="sphboard_latestpost">{% sphboard_latestPost thread.latestPost 0 %}
         </tr>
@@ -44,7 +44,8 @@
     </table>
     <br/><br/>
     {% if allowPostThread %}
-      {% sphboard_displayPostForm %}
+      <a href="../../post/{{ category.id }}/">Post New Thread</a>
+      {# sphboard_displayPostForm #}
     {% else %}
       {% if user.is_authenticated %}
         You have no permission to create a new thread.
