--- a/sphenecoll/templates/sphene/sphboard/showThread.html
+++ b/sphenecoll/templates/sphene/sphboard/showThread.html
@@ -27,12 +27,56 @@
       <tr>
         <td class="sphboard_post_body">{{ post.body_escaped }}</td>
       </tr>
+      {% ifequal post thread %}
+        {% if post.poll %}
+          <tr>
+            <td colspan='2'>
+              <b>Poll: {{ post.poll.question }}</b><br/><br/>
+              {% if post.poll.has_voted %}
+                You already voted. Here are the results ({{ post.poll.total_voters }} votes total - {% widthratio post.poll.null_votes post.poll.total_votes 100 %}% did not answer):
+                <table class="sphboard polls_results">
+                  {% for choice in post.poll.choices %}
+                    <tr>
+                      <td align="right" style="white-space:nowrap;">{% widthratio choice.count post.poll.total_votes 100 %}%</td>
+                      <td width="100%"><span style="background-color:#cccccc;font-size:5px;height:10px;padding-right:{% widthratio choice.count post.poll.total_votes 500 %}px;">&nbsp;</span><br/>{{ choice.choice }}</td>
+                    </tr>
+                  {% endfor %}
+                </table>
+              {% else %}
+              <form method="POST" action="../../vote/{{ thread.id }}/">
+              {% if request.attributes.voteerror %}
+                <strong class="sphboard error">Error: {{ request.attributes.voteerror }}</strong><br/>
+              {% endif %}
+              {% if post.poll.multiplechoice %}
+                You may select up to {{ post.poll.choices_per_user }} answers:
+                <ul style="list-style: none">
+                  {% for choice in post.poll.choices %}
+                    <li><input type="checkbox" name="pollchoice" value="{{ choice.id }}" id="pollchoice_{{ choice.id }}" /> <label for="pollchoice_{{ choice.id }}">{{ choice.choice }}</label></li>
+                  {% endfor %}
+                  <li><input type="checkbox" name="pollchoice" value="0" id="pollchoice_0" /> <label for="pollchoice_0">Show Results (You won't be able to vote.)</label></li>
+                </ul>
+              {% else %}
+                <ul style="list-style: none">
+                  {% for choice in post.poll.choices %}
+                    <li><input type="radio" name="pollchoice" value="{{ choice.id }}" id="pollchoice_{{ choice.id }}" /> <label for="pollchoice_{{ choice.id }}">{{ choice.choice }}</label></li>
+                  {% endfor %}
+                  <li><input type="radio" name="pollchoice" value="0" id="pollchoice_0" /> <label for="pollchoice_0">Show Results (You won't be able to vote.)</label></li>
+                </ul>
+              {% endif %}
+              <input type="submit" value="Vote" />
+              </form>
+              {% endif %}
+            </td>
+          </tr>
+        {% endif %}
+      {% endifequal %}
     {% endfor %}
   </table>
   <br/><br/>
   
   {% if allowPosting %}
-    {% sphboard_displayPostForm thread %}
+    <a href="../../post/{{ thread.category.id }}/?thread={{ thread.id }}">Post Reply</a>
+    {# sphboard_displayPostForm thread #}
   {% else %}
     {% if user.is_authenticated %}
       You have no permission to post a reply.
