--- a/static/style.css
+++ b/static/style.css
@@ -100,3 +100,8 @@ ul.news .subject {
 ul.news .comments {
         padding-top: 5px;
 }
+
+.error, .errorlist {
+        color: red;
+        font-weight: bold;
+}
