--- a/static/style.css
+++ b/static/style.css
@@ -173,3 +173,8 @@ div.languageswitcher select {
   border: 1px solid gray;
   background: inherit;
 }
+
+#poweredby {
+  display:block;
+  text-align: center;
+}
