--- a/community/settings_local.py.tmpl
+++ b/community/settings_local.py.tmpl
@@ -2,15 +2,13 @@
 # Copy this file to settings_local.py and adjust the following 
 # settings.
 
-DATABASE_ENGINE = 'postgresql'   # 'postgresql', 'mysql', 'sqlite3' or 
-                                 # 'ado_mssql'.
-DATABASE_NAME = 'communitydraft' # Or path to database file if using sqlite3.
-DATABASE_USER = 'django'         # Not used with sqlite3.
-DATABASE_PASSWORD = 'test'       # Not used with sqlite3.
-DATABASE_HOST = '127.0.0.1'      # Set to empty string for localhost. Not 
-                                 # used with sqlite3.
-DATABASE_PORT = ''               # Set to empty string for default. Not 
-                                 # used with sqlite3.
+
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': 'sctdb.sqlite',
+    }
+}
 
 # Make this unique, and don't share it with anybody.
 SECRET_KEY = 'Make me unique'
@@ -24,4 +22,28 @@ SPH_HOST_MIDDLEWARE_URLCONF_MAP = {
     r'^(?P<groupName>\w+).localhost.*$': { 'urlconf': 'urlconfs.community_urls', },
     '.*': { 'urlconf': 'urlconfs.community_urls',
             'params': { 'groupName': 'example' } },
+}
+
+LOGGING = {
+    'version': 1,
+    'disable_existing_loggers': False,
+    'handlers': {
+        'console': {
+            'class': 'logging.StreamHandler',
+        },
+    },
+    'loggers': {
+        'sphene': {
+            'handlers': ['console'],
+            'level': 'DEBUG',
+        },
+        'django': {
+            'handlers': ['console'],
+            'level': os.getenv('DJANGO_LOG_LEVEL', 'INFO'),
+        },
+        'django.db.backends': {
+            'handlers': ['console'],
+            'level': 'DEBUG'
+        }
+    },
 }
